array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compteur = 0
  var x = num(0)
  for (i<- 1 to num.size-1){
    x=num(i-1)
    if (x<=num(i)){
        compteur = compteur +1
      }
    }
  }
  return compteur
}